[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.5.0

  - Redo the makedelta system, and break into source_makedelta and target_makedelta 
    options for both syncs and goats, which inherit from the higher level (goat 
    inherits from sync inherits from db). Add makedelta as on/off for db. [GSM]

  - Allow triggers and rules to work on bucardo_delta and bucardo_track by 
    setting new column bucardo.db.makedelta_triggers to true. [GSM]

  - Fix for proper sourcelimit and targetlimit calculations. [GSM]

  - Allow 'list sync' to filter by 'active' and 'inactive' [GSM]

  - Remove unused config variable 'upsert_attempts' [GSM]

  - Show detailed information on KID error exit. [GSM]

  - Fix bug in bucardo_purge_q_table in index detection logic. [Aolmezov]

  - Relax SELECT version() regex in bucardo_ctl, to let modified versions 
    of Postgres tell us their version. [GSM]

  - Fix incorrect automatic population of database when using bucardo_ctl 
    add database and only one database exists. [GSM]

  - New syncs of type fullcopy now default to false for ping, stayalive, 
    and kidsalive. [GSM, idea from Andrew Spencer]

  - Refuse to start if the bucardo database version does not match that of 
    bucardo_ctl (the former is set by 'bucardo_ctl upgrade') [GSM]

  - Make sure we update bucardo_config.bucardo_current_version when doing 
    a bucardo_ctl upgrade [GSM] (Bug #5)

  - Better formatting of bucardo.reason.log, and log startup failures. [GSM]

  - Log the current configuration settings on startup. [GSM]


Bucardo version 4.4.0, released October 14, 2009

  - Allow validate_goat() to work correctly against pgbouncer databases by 
    respecting the server_side_prepares parameter. [GSM]

  - Loosen restrictions on customcode - now the derived columns must match 
    the target, but the target and source tables can be completely different. [GSM]
